Archive2/d2/4edc083610e092/output
main.cpp:4:10: error: variable 'ptm' with type 'auto' has incompatible initializer of type '<overloaded function type>'
    auto ptm = &decltype(f)::operator();
         ^     ~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
main.cpp: In function 'int main()':
main.cpp:4:39: error: unable to deduce 'auto' from '& main()::<lambda(auto:1)>'
     auto ptm = &decltype(f)::operator();
                                       ^
